# learn-cuda

./: LICENSE  README.md
chapter-notes/: 2-heterogeneous-data-parallel-computing.md  3-multidimensional-grids-and-data.md  4-compute-architecture-and-scheduling.md  5-memory-architecture-and-data-locality.md  6-memory-coalescing.md  7-convolution.md  8-stencil.md
programs/convolution/: CMakeLists.txt  conv.cu
programs/decolor-img/: CMakeLists.txt  color-to-grayscale  color-to-grayscale.cu  misc.cuh
programs/hello-cuda/: CMakeLists.txt  sequential-add.cpp  vec-add  vec-add.cu
programs/multiply/: CMakeLists.txt  a.out  matrix-matrix-multiply.cu
